--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <!-- BootStrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Javascript for BootStrap -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   
   <!-- Google Font -->
@@ -19,8 +19,8 @@
   crossorigin=""/>
 
   <!-- Icons -->
-  <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css"> -->
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
@@ -29,49 +29,53 @@
 <body>
 
   <!-- The div that holds our map -->
-  <div id="nav">
-    <div class="logo-icon">
-        <h1>SMMA</h1>
-    </div>
-    <div class="navlinks">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Data</a></li>
-        </ul>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-        <div class="col-md-2 sidemenu">
-            <div>
-            <p>Side filter option</p>
-            </div>
-            <div>
-            <p>Side filter option 2</p>
-            </div>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
+        <a class="navbar-brand" href="#">SMMA</a>
+        <div class="collapse navbar-collapse flex-grow-0 ml-auto">
+            <ul class="navbar-nav text-right">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Data</a>
+                </li>
+            </ul>
         </div>
-        <div class="col-md-10">
-            <div class="row">
-                <div class="col-md-6">
-                <div id="map-id">
-                    <p>Here is the map graph</p>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 sidemenu">
+                <div id="filter-1">
+                        <p>Side filter option</p>
                 </div>
-                </div>
-                <div class="col-md-6">
-                <div id="bar-id">
-                    <p>Here is the bar graph</p>
-                </div>
+                <div id="filter-2">
+                    <p>Side filter option 2</p>
                 </div>
             </div>
-            <div class="row">
-                <div id="line-id">
-                    <p>Here is the line graph</p>
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-6 pd-l-0">
+                        <div id="map-id">
+                            <p>Here is the map graph</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 pd-r-0">
+                        <div id="bar-id">
+                            <p>Here is the bar graph</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <div class="row">
+                    <div id="line-id">
+                        <p>Here is the line graph</p>
+                    </div>
+                </div>
+            </div>  
         </div>
     </div>
-  </div>
  
 
   <!-- D3 -->
@@ -84,10 +88,6 @@
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
-  <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script>
-
-  <!-- Icons -->
-  <script src="static/js/leaflet.extra-markers.min.js"></script>
 
   <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
