--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container_set">
         <div class="row">
             <div class="col-md-2">
                 <div class="sidemenu">
                     <div class="filter">
-                        <p>Side filter option</p>
+                        <h5>Side filter option</h5>
                     </div>
                     <div class="filter">
-                        <p>Date From: <input type="text" id="datefrom"></p>
-                        <p>To<input type="text" id="dateto"></p>
+                        <p>Date From: <br><input type="text" id="datefrom"></p>
+                        <p>To<br><input type="text" id="dateto"></p>
                         <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
                     </div>
                     <div class="filter">
@@ -77,17 +77,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-8">
                 <div class="row">
-                    <div class="col-md-6 pd-l-0">
-                        <div id="map-id">
-                            <p>Here is the Geomap graph</p>
-                        </div>
+                    <div id="map-id">
+                        <p>Here is the Geomap graph</p>
                     </div>
-                    <div class="col-md-6 pd-r-0">
-                        <div id="bar-id">
-                            <p>Here is the bar graph</p>
-                        </div>
+                </div>
+                <div class="row">
+                    <div id="bar-id">
+                        <p>Here is the bar graph</p>
                     </div>
                 </div>
                 <div class="row">
@@ -96,6 +94,14 @@
                     </div>
                 </div>
             </div>  
+            <div class="col-md-2">
+                <div class="sideinfo">
+                    <h5>Data</h5>
+                    <div class="row">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
  
