--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>SMMA Project 3</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway&display=swap" rel="stylesheet">
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Javascript for BootStrap -->
@@ -18,9 +20,6 @@
           $( "#dateto" ).datepicker();
         } );
     </script>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
@@ -60,21 +59,49 @@
             </ul>
         </div>
     </nav>
-    <div class="container_set">
+    <div>
         <div class="row">
             <div class="col-md-2">
                 <div class="sidemenu">
                     <div class="filter">
                         <h5>Side filter option</h5>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="zika">Zika
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="ebola">Ebola
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="covid-19">COVID-19
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="cholera">Cholera
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="sars">SARS
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="h1n1">H1N1
+                            </label>
+                        </div>
+                        <div class="filter">
+                            <p>Date From: <br><input type="text" id="datefrom"></p>
+                            <p>To<br><input type="text" id="dateto"></p>
+                            <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
+                        </div>
                     </div>
-                    <div class="filter">
-                        <p>Date From: <br><input type="text" id="datefrom"></p>
-                        <p>To<br><input type="text" id="dateto"></p>
-                        <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
-                    </div>
-                    <div class="filter">
-                        
-                    </div>
+                    
                 </div>
             </div>
             <div class="col-md-8">
