--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Javascript for BootStrap -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://unpkg.com/simple-statistics@5.0.0/dist/simple-statistics.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- Plotly -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script>
         $( function() {
-          $( "#datefrom" ).datepicker();
-          $( "#dateto" ).datepicker();
+          $( "#date-1" ).datepicker();
+          $( "#date-2" ).datepicker();
         } );
     </script>
 
@@ -33,8 +37,7 @@
     <!-- D3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
 
-    <!-- Plotly -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
@@ -64,7 +67,14 @@
             <div class="col-md-2">
                 <div class="sidemenu">
                     <div class="filter">
-                        <h5>Side filter option</h5>
+                        <div class="filter">
+                            <label for="epidemic">Date From: </label>
+                            <input type="text" id="date-1" name="date-1">
+                            <label for="epidemic">Date To: </label>
+                            <input type="text" id="date-2" name="date-2">
+                            <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
+                        </div>
+                        <h3>Epidemic</h3>
                         <div class="form-check">
                             <label class="form-check-label">
                                 <input type="checkbox" class="form-check-input" value="zika">Zika
@@ -95,12 +105,31 @@
                                 <input type="checkbox" class="form-check-input" value="h1n1">H1N1
                             </label>
                         </div>
-                        <div class="filter">
-                            <label for="epidemic">Date From: </label>
-                            <input type="text" id="date-1" name="date-1">
-                            <label for="epidemic">Date To: </label>
-                            <input type="text" id="date-2" name="date-2">
-                            <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
+                        <h3>Market</h3>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="ebola">Ebola
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="covid-19">COVID-19
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="cholera">Cholera
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="sars">SARS
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" value="h1n1">H1N1
+                            </label>
                         </div>
                     </div>
                     
