--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <div id="map"></div>
     <!-- API key -->
     <script type="text/javascript" src="config.js"></script>
-    <script type="text/javascript" src="map_v1.js"></script>
+    <!-- <script type="text/javascript" src="map_v1.js"></script> -->
+    <script type="text/javascript" src="map_v2.js"></script>
+    <!-- <script type="text/javascript" src="test.js"></script> -->
 
 
 
