--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
   <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
   <script type="text/javascript" src="static/js/plots.js"></script>
   <script type="text/javascript" src="static/js/epidemic_trend_plots.js"></script>
-  <script type="text/javascript" src="map.js"></script>
+  <!-- <script type="text/javascript" src="map.js"></script> -->
+  <script type="text/javascript" src="config.js"></script>
+
+
+  <script type="text/javascript" src="test.js"></script>
+
 
 
 </body>
