Pushing Aracely's code to master

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    
     <script>
         $( function() {
           $( "#date-1" ).datepicker();
@@ -198,6 +199,9 @@
   <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
   <script type="text/javascript" src="static/js/plots.js"></script>
   <script type="text/javascript" src="static/js/epidemic_trend_plots.js"></script>
+  <script type="text/javascript" src="static/js/map.js"></script>
+  <script type="text/javascript" src="static/js/config.js"></script>
+
   
 
 </body>
