--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div class="filter">
                         <div class="filter">
                             <label for="epidemic">Date From: </label>
-                            <input type="text" id="date-1" name="date-1">
+                            <input type="text" id="date-1" name="date-1" value="01/01/2020">
                             <label for="epidemic">Date To: </label>
-                            <input type="text" id="date-2" name="date-2">
-                            <button id="submit-btn" type="button" class="btn btn-default">Submit</button>
+                            <input type="text" id="date-2" name="date-2" value="02/01/2020">
+                            <input id="submit-btn" type="submit" class="btn btn-default" value="Submit">
                         </div>
 
                         <script>
@@ -114,30 +114,31 @@
                                 <input type="checkbox" class="form-check-input" value="h1n1">H1N1
                             </label>
                         </div>
+                        <br>
                         <h3>Market</h3>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="ebola">Ebola
+                                <input type="checkbox" class="form-check-input" value="dowjones">Dow Jones Industrial (U.S.)
                             </label>
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="covid-19">COVID-19
+                                <input type="checkbox" class="form-check-input" value="s&p500">S&P 500 (U.S)
                             </label>
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="cholera">Cholera
+                                <input type="checkbox" class="form-check-input" value="ftse100">FTSE100 (U.K)
                             </label>
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="sars">SARS
+                                <input type="checkbox" class="form-check-input" value="nikkei">Nikkei 225 (Japan)
                             </label>
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="h1n1">H1N1
+                                <input type="checkbox" class="form-check-input" value="hangseng">Hang Seng (Hong Kong)
                             </label>
                         </div>
                     </div>
@@ -147,12 +148,12 @@
             <div class="col-md-8">
                 <div class="row">
                     <div id="map-id">
-                        <p>Here is the Geomap graph</p>
+
                     </div>
                 </div>
                 <div class="row">
                     <div id="bar-id">
-                        <p>Here is the bar graph</p>
+
                     </div>
                 </div>
                 <div class="row">
