--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     
-    <!-- <script>
+    <script>
         $( function() {
           $( "#date-1" ).datepicker({ dateFormat: 'yy-mm-dd' });
           $( "#date-2" ).datepicker({ dateFormat: 'yy-mm-dd' });
         } );
-    </script> -->
+    </script>
     
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
