--- a/index.html
+++ b/index.html
@@ -102,37 +102,43 @@
               });
             </script>
 
+
             <h3>Epidemic</h3>
+            <text><i><small>(Select only one)</small></i></text>
+
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="zika">Zika
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="zika">Zika
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="ebola">Ebola
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="ebola">Ebola
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="covid-19">COVID-19
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="covid-19">COVID-19
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="cholera">Cholera
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="cholera">Cholera
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="sars">SARS
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="sars">SARS
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="h1n1">H1N1
+                <input type="radio" class="form-check-input epidemic" name="epidemic" value="h1n1">H1N1
               </label>
             </div>
+            <br>
+
+
             <h3>Market</h3>
             <div class="form-check">
               <label class="form-check-label">
@@ -152,6 +158,7 @@
             <div class="form-check">
               <label class="form-check-label">
                 <input type="checkbox" class="form-check-input" value="sars">SARS
+                
               </label>
             </div>
             <div class="form-check">
@@ -188,9 +195,9 @@
       <div class="col-md-2">
         <div class="sideinfo">
           <h5>Data</h5>
-          <div class="row">
+          <ul id="list">
+          </ul>
 
-          </div>
         </div>
       </div>
     </div>
@@ -217,11 +224,15 @@
   <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
   <script type="text/javascript" src="static/js/plots.js"></script>
   <script type="text/javascript" src="static/js/epidemic_trend_plots.js"></script>
-  <!-- <script type="text/javascript" src="map.js"></script> -->
+  <script type="text/javascript" src="static/js/map.js"></script>
   <script type="text/javascript" src="config.js"></script>
 
 
-  <script type="text/javascript" src="test.js"></script>
+      <input type="radio" name="gender" value="Others">Others 
+
+
+
+  <!-- <script type="text/javascript" src="test.js"></script> -->
 
 
 
