--- a/data.html
+++ b/data.html
@@ -31,9 +31,26 @@
             </div>
         </nav>
 
-        <div class="google-slides-container">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQBl8jmYUzPNW8V6XnmlSonDo_qup3eCQnXaMqXoLyKi1Nw7Jk4HBwVlBFDvxfLVg/embed?start=false&loop=false&delayms=60000" frameborder="0" width="1920" height="1109" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <div class="container">
+            <div id="data-link">
+                <h3>Ebola</h3>
+                <a href="http://0.0.0.0:5000/api/v1.0/epidemic/ebola">Raw Data LINK Ebola</a>
+                <h3>COVID-19</h3>
+                <a href="http://0.0.0.0:5000/api/v1.0/epidemic/corona">Raw Data LINK CoronaVirus</a>
+                <h3>SARS</h3>
+                <a href="http://0.0.0.0:5000/api/v1.0/epidemic/sars">Raw Data LINK SARS</a>
+            </div>
         </div>
 
+        <div class="animation-area">
+            <ul class="box-area">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </body>
 </html>
